<resources>
    <string name="app_name">AttendanceTLU</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="username_is_empty">Username is empty</string>
    <string name="username_is_invalid">Username is invalid</string>
    <string name="password_is_empty">Password is empty</string>
    <string name="password_is_invalid">Password is invalid</string>
    <string name="current_password_is_empty">Current password is empty</string>
    <string name="password_length_required_5"><![CDATA[Password length required > 5]]></string>
    <string name="current_password_incorrect">Current password incorrect</string>
    <string name="new_password_is_empty">New password is empty</string>
    <string name="new_password_length_required_5"><![CDATA[New password length required > 5]]></string>
    <string name="password_not_match">Password not match</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="submit">Submit</string>
    <string name="name_is_empty">Name is empty</string>
    <string name="continue_string">Continue</string>
    <string name="attendance">Attendance</string>
    <string name="see_attendance_list">See attendance list</string>
    <string name="checked_in">Checked in</string>
    <string name="not_checked_in">Not checked in</string>
    <string name="all_student">All student</string>
    <string name="update_schedule">Update schedule</string>
    <string name="delete_schedule">Delete schedule</string>
    <string name="edit">Edit</string>
    <string name="default_notification_channel_id">Attendance</string>
    <string name="confirm_attendance">Confirm attendance</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>