<?xml version="1.0" encoding="utf-8"?><!-- res/layout/popup_layout.xml -->
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingEnd="25dp"
    android:background="@drawable/bg_item_profile"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_all_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="13dp"
        android:paddingVertical="12dp"
        android:text="@string/all_student"
        android:textColor="@color/black"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/tv_checked_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="13dp"
        android:paddingVertical="12dp"
        android:text="@string/checked_in"
        android:textColor="@color/black"
        android:textSize="16sp"
       />

    <TextView
        android:id="@+id/tv_not_checked_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="12dp"
        android:paddingStart="13dp"
        android:text="@string/not_checked_in"
        android:textColor="@color/black"
        android:textSize="16sp"
       />

</LinearLayout>
</layout>
