<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#121A40"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            style="@style/text_bold_22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Add Account"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_marginEnd="70dp"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintBottom_toBottomOf="@id/tv_title"
            app:layout_constraintEnd_toStartOf="@id/tv_title"
            app:layout_constraintTop_toTopOf="@id/tv_title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_main_screen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title">

            <ImageView
                android:id="@+id/iv_bg_add_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="100dp"
                android:adjustViewBounds="true"
                android:src="@drawable/bg_add_account"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edt_name"
                style="@style/text_16"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginHorizontal="35dp"
                android:background="@drawable/bg_add_account_edit_text"
                android:hint="Name"
                android:maxLines="1"
                android:paddingHorizontal="30dp"
                android:textColor="#3C3C3C"
                app:layout_constraintTop_toBottomOf="@id/iv_bg_add_account" />

            <TextView
                android:id="@+id/tv_error_name"
                style="@style/text_bold_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="Error name"
                android:textColor="#D12828"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/edt_name"
                app:layout_constraintTop_toBottomOf="@id/edt_name" />

            <EditText
                android:id="@+id/edt_username"
                style="@style/text_16"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginHorizontal="35dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_add_account_edit_text"
                android:hint="Username"
                android:maxLines="1"
                android:paddingHorizontal="30dp"
                android:textColor="#3C3C3C"
                app:layout_constraintTop_toBottomOf="@id/tv_error_name" />

            <TextView
                android:id="@+id/tv_error_username"
                style="@style/text_bold_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="Error username"
                android:textColor="#D12828"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/edt_username"
                app:layout_constraintTop_toBottomOf="@id/edt_username" />

            <EditText
                android:id="@+id/edt_password"
                style="@style/text_16"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginHorizontal="35dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_add_account_edit_text"
                android:hint="Password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingHorizontal="30dp"
                android:textColor="#3C3C3C"
                app:layout_constraintTop_toBottomOf="@id/tv_error_username" />

            <TextView
                android:id="@+id/tv_error_password"
                style="@style/text_bold_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="Error password"
                android:textColor="#D12828"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/edt_password"
                app:layout_constraintTop_toBottomOf="@id/edt_password" />

            <TextView
                android:id="@+id/tv_title_role"
                style="@style/text_bold_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Role: "
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@id/edt_password"
                app:layout_constraintTop_toBottomOf="@id/tv_error_password" />

            <RadioGroup
                android:id="@+id/rg_role"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toEndOf="@id/tv_title_role"
                app:layout_constraintTop_toTopOf="@id/tv_title_role">

                <RadioButton
                    android:id="@+id/radio_teacher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="#121A40"
                    android:text="@string/teacher" />

                <RadioButton
                    android:id="@+id/radio_student"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="#121A40"
                    android:checked="true"
                    android:text="@string/student" />


            </RadioGroup>

            <TextView
                android:id="@+id/tv_submit"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_marginHorizontal="35dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_submit_add_account"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/rg_role" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>